--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+    <title>Hello World</title>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
