--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<html lang="en">
-    <title>Hello World</title>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<!-- fix : <html> element does not have a [lang] attribute -->
+    <!DOCTYPE html>
+
+    <html lang="en">
+        <head>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <meta name="description" content="Hello World!.">
+            <title>Hello World!</title>
+        </head>
+        <body>
+          Hello World!
+        </body>
+        </html>
+        
